Refactor(eos_cli_config_gen)!: Make router_traffic_engineering.enabled required

--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -84,11 +84,15 @@ See the [porting guide](../porting-guides/5.x.x.md#no-auto-conversion-of-old-dat
 
 See the [porting guide](../porting-guides/5.x.x.md#ip_securitysa_policiesespintegrity-and-encryption-null-option-has-been-replaced-with-disabled) for details.
 
+#### `router_traffic_engineering.enabled` is required
+
+See the [porting guide](../porting-guides/5.x.x.md#router_traffic_engineeringenabled-is-required) for details.
+
 #### Removal of schema in JSON format
 
 The `eos_cli_config_gen.jsonschema.json` is no longer generated. This schema was not being used and had never been complete.
 
-### Removal of default type `switched` from ethernet interfaces and port-channel interfaces
+#### Removal of default type `switched` from ethernet interfaces and port-channel interfaces
 
 Starting AVD 5.0.0, the default value for `type` in `ethernet_interfaces` and `port_channel_interfaces` is no longer supported. The `type` key must now be explicitly defined in the input variables if it is needed in the configuration and documentation.
 
