--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -397,6 +397,28 @@ As of AVD 5.0.0 "null" option for esp integrity and encryption has been replaced
 +      encryption: disabled
 ```
 
+### `router_traffic_engineering.enabled` is required
+
+In AVD 4.0.0, setting `enabled: true` under `router_traffic_engineering` was not
+required and it was possible to render
+
+```eos
+router traffic-engineering
+```
+
+using the following input
+
+```yaml
+router_traffic_engineering:
+```
+
+As of AVD 5.0.0, the `enabled` keyword is required under `router_traffic_engineering`:
+
+```yaml
+router_traffic_engineering:
+  enabled: true
+```
+
 ### Removal of default type `switched` from ethernet interfaces and port-channel interfaces
 
 In AVD 4.0.0, we had "switched" as the default value for `ethernet_interfaces[].type` and `port_channel_interfaces[].type`.
